--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,18 +10,16 @@
  <body>
    <nav>
     <a>Create</a>
-    <a href="/read">Read</a>
-    <a href="/update">Update</a>
-    <a href="/delete">Delete</a>
-    <a href="/search">Search</a>
-    <a href="/adv1">ADV1</a>
-    <a href="/adv2">ADV2</a>
+    <a href="/index">Home</a>
+    <a href="/createuser">User</a>
+    <a href="/review">Reviews</a>
+    
   </nav>
    <div class="container mt-4">
      <div class="card">
        <div class="card-body">
-         <h2>Create a User</h2>
-         <form action="create-user" method="POST">
+         <h2>Welcome to Team 404's 411 project!</h2>
+         <form action="choice" method="POST">
            <div class="form-group">
              <label for="name">Name</label>
                       <input type="text" class="form-control col-lg-9" id="name" aria-describedby="emailHelp" placeholder="Enter Name" name="name">
