--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,7 @@
 
  <body>
    <nav>
-    <a>Create</a>
-    <a href="/index">Home</a>
+    <a>Home</a>
     <a href="/createuser">User</a>
     <a href="/review">Reviews</a>
     
@@ -21,31 +20,12 @@
          <h2>Welcome to Team 404's 411 project!</h2>
          <form action="choice" method="POST">
            <div class="form-group">
-             <label for="name">Name</label>
-                      <input type="text" class="form-control col-lg-9" id="name" aria-describedby="emailHelp" placeholder="Enter Name" name="name">
+             
 
 
-             <label for="netid">Net ID</label>
-             <input type="text" class="form-control col-lg-9" id="netid" aria-describedby="emailHelp" placeholder="Enter Net ID" name="netid">
+           <button type="submit" value="User" class="btn btn-primary">User</button>
+           <button type="submit" value="Review" class="btn btn-primary">Review</button>
 
-           <label for="deptid">Dept ID</label>
-             <input type="text" class="form-control col-lg-9" id="dept" aria-describedby="emailHelp" placeholder="Enter Department eg.CS" name="dept">
-
-           <label for="sem">Semester</label>
-             <input type="text" class="form-control col-lg-9" id="sem" aria-describedby="emailHelp" placeholder="Enter Semester (Fall/Spring/Summer/Winter)" name="sem">
-
-           <label for="year">Year</label>
-             <input type="number" class="form-control col-lg-9" id="year" aria-describedby="emailHelp" placeholder="Enter year eg.2000" name="year">
-
-           <label for="email">Email</label>
-             <input type="text" class="form-control col-lg-9" id="email" aria-describedby="emailHelp" placeholder="Enter Email Id eg.name@illinois.edu" name="email">
-
-           <label for="password">Password</label>
-             <input type="text" class="form-control col-lg-9" id="password" aria-describedby="emailHelp" placeholder="Enter Password" name="password">
-</div>
-
-
-           <button type="submit" class="btn btn-primary">Submit</button>
          </form>
    </div>
  </div>
