--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
  <head>
          <title>411 Project Demo</title>
@@ -16,15 +16,15 @@
   </nav>
    <div class="container mt-4">
      <div class="card">
-       <div class="card-body">
+       <div class="card-body" style="text-align: center; border: 1px solid">
          <h2>Welcome to Team 404's 411 project!</h2>
          <form action="choice" method="POST">
            <div class="form-group">
              
 
 
-           <button type="submit" value="User" class="btn btn-primary">User</button>
-           <button type="submit" value="Review" class="btn btn-primary">Review</button>
+           <button type="submit" value="User" class="btn btn-primary">Create Review</button>
+           <button type="submit" value="Review" class="btn btn-primary">Read Reviews</button>
 
          </form>
    </div>
