--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
  <body>
    <nav>
     <a>Home</a>
-    <a href="/createuser">User</a>
+    <a href="/user">User</a>
     <a href="/review">Reviews</a>
     
   </nav>
@@ -21,10 +21,9 @@
          <form action="choice" method="POST">
            <div class="form-group">
              
+<input type="submit" value="user" name ="submit">
+                      <input type="submit" value="review" name = "submit">
 
-
-           <button type="submit" value="User" class="btn btn-primary">Create Review</button>
-           <button type="submit" value="Review" class="btn btn-primary">Read Reviews</button>
 
          </form>
    </div>
