--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,8 @@
          <h2>Welcome to Team 404's 411 project!</h2>
          <form action="choice" method="POST">
            <div class="form-group">
-             
-<input type="submit" value="user" name ="submit">
-                      <input type="submit" value="review" name = "submit">
-
-
+              <input type="submit" value="write review" name ="submit">
+              <input type="submit" value="read review" name = "submit">
          </form>
    </div>
  </div>
