--- a/views/user.ejs
+++ b/views/user.ejs
@@ -18,10 +18,10 @@
      <div class="card">
        <div class="card-body" style="text-align: center; border: 1px solid">
          <h2>User Details</h2>
-         <form action="choice" method="POST">
+         <form action="user-action" method="POST">
            <div class="form-group">
-           <button type="submit" value="login" class="btn btn-primary">Login</button>
-           <button type="submit" value="signup" class="btn btn-primary">Sign up</button>
+            <input type="submit" value="login" name ="submit">
+            <input type="submit" value="signup" name = "submit">
 
          </form>
    </div>
