--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
  <head>
          <title>411 Project Demo</title>
@@ -11,22 +11,22 @@
    <nav>
     <a>Create</a>
     <a href="/index">Home</a>
-    <a>User</a>
+    <a href="/user">User</a>
     <a href="/review">Reviews</a>
     
   </nav>
    <div class="container mt-4">
      <div class="card">
        <div class="card-body">
-         <h2></h2>
+         <h2>Enter new user details</h2>
          <form action="create-user" method="POST">
            <div class="form-group">
+
              <label for="name">Name</label>
                       <input type="text" class="form-control col-lg-9" id="name" aria-describedby="emailHelp" placeholder="Enter Name" name="name">
 
-
-             <label for="netid">Net ID</label>
-             <input type="text" class="form-control col-lg-9" id="netid" aria-describedby="emailHelp" placeholder="Enter Net ID" name="netid">
+            <label for="netid">Net ID</label>
+              <input type="text" class="form-control col-lg-9" id="netid" aria-describedby="emailHelp" placeholder="Enter Net ID" name="netid">
 
            <label for="deptid">Dept ID</label>
              <input type="text" class="form-control col-lg-9" id="dept" aria-describedby="emailHelp" placeholder="Enter Department eg.CS" name="dept">
@@ -42,10 +42,9 @@
 
            <label for="password">Password</label>
              <input type="text" class="form-control col-lg-9" id="password" aria-describedby="emailHelp" placeholder="Enter Password" name="password">
-</div>
+            </div>
 
-
-           <button type="submit" class="btn btn-primary">Submit</button>
+           <button type="submit" class="btn btn-primary">Create Account</button>
          </form>
    </div>
  </div>
