--- a/views/readreview.ejs
+++ b/views/readreview.ejs
@@ -21,14 +21,6 @@
          <form action="create-user" method="POST">
            <div class="form-group">
 
-            <label for="name">Name</label>
-               <input type="text" class="form-control col-lg-9" id="name" aria-describedby="emailHelp" placeholder="Enter Name" name="name">
-
-            <label for="netid">Net ID</label>
-              <input type="text" class="form-control col-lg-9" id="netid" aria-describedby="emailHelp" placeholder="Enter Net ID" name="netid">
-
-           <label for="deptid">Dept ID</label>
-             <input type="text" class="form-control col-lg-9" id="dept" aria-describedby="emailHelp" placeholder="Enter Department eg.CS" name="dept">
 
            <label for="sem">Semester</label>
              <input type="text" class="form-control col-lg-9" id="sem" aria-describedby="emailHelp" placeholder="Enter Semester (Fall/Spring/Summer/Winter)" name="sem">
@@ -39,6 +31,16 @@
            <label for="email">Email</label>
              <input type="text" class="form-control col-lg-9" id="email" aria-describedby="emailHelp" placeholder="Enter Email Id eg.name@illinois.edu" name="email">
 
+             <label for="year">Year</label>
+             <select name="country" id="country" class="form-control">
+                <option value="">Select Country</option>
+                <% for(var yr = 2010; yr <= 2022; yr++) 
+                { %>
+
+                <option value="<%= yr %>"><%= yr %></option>
+
+                <% } %>
+            </select>
            <label for="password">Password</label>
              <input type="text" class="form-control col-lg-9" id="password" aria-describedby="emailHelp" placeholder="Enter Password" name="password">
             </div>
