--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -18,7 +18,7 @@
      <div class="card">
        <div class="card-body">
          <h2>Enter new user details</h2>
-         <form action="create-user" method="POST">
+         <form action="post-review" method="POST">
            <div class="form-group">
 
             
