--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -75,7 +75,7 @@
 
             </div>
 
-           <button type="submit" class="btn btn-primary">Create Account</button>
+           <button name="mybutton" type="submit" value=netid class="btn btn-primary">Post Review</button>
          </form>
    </div>
  </div>
