--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -78,6 +78,7 @@
             </div>
 
            <button name="mybutton" type="submit" value=<%= netid %> class="btn btn-primary">Post Review</button>
+           <button name="mybutton2" hidden="hidden" type="submit" value=deptid> class="btn btn-primary">Post Review</button>
          </form>
    </div>
  </div>
