--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -74,11 +74,11 @@
 
             <label for="review">Review</label>
             <input type="text" class="form-control col-lg-9" id="reviewtext" aria-describedby="emailHelp" placeholder="Enter review" name="review">
+            <input type="text" hidden class="form-control col-lg-9" id="dept" aria-describedby="emailHelp" value = "dept1" placeholder="dept" name="review">
 
             </div>
 
            <button name="mybutton" type="submit" value=<%= netid %> class="btn btn-primary">Post Review</button>
-           <button name="mybutton2" hidden="hidden" type="submit" value=deptid> class="btn btn-primary">Post Review</button>
          </form>
    </div>
  </div>
