--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -17,7 +17,7 @@
    <div class="container mt-4">
      <div class="card">
        <div class="card-body">
-         <h2>Enter new user details</h2>
+         <h2>Enter review details</h2>
          <form action="post-review" method="POST">
            <div class="form-group">
 
