--- a/views/loginuser.ejs
+++ b/views/loginuser.ejs
@@ -28,7 +28,7 @@
              <input type="text" class="form-control col-lg-9" id="password" aria-describedby="emailHelp" placeholder="Enter Password" name="password">
             </div>
 
-            <input type="submit" value="delete user" name ="submit">
+            <input type="submit" value="delete" name ="submit">
             <input type="submit" value="login" name = "submit">
          </form>
    </div>
