--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -78,7 +78,7 @@
 
             </div>
 
-           <button name="mybutton" type="submit" value=<%= netid %> class="btn btn-primary">Post Review</button>
+           <button name="mybutton" type="submit" value="1" class="btn btn-primary">Post Review</button>
          </form>
    </div>
  </div>
