--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -21,8 +21,8 @@
          <form action="post-review" method="POST">
            <div class="form-group">
 
-          <label for="deptid">DeptId</label>
-          <input type="text" class="form-control col-lg-9" id="deptid" aria-describedby="emailHelp" placeholder="Enter Department" name="review">
+          <label for="netid">Net Id</label>
+          <input type="text" class="form-control col-lg-9" id="deptid" aria-describedby="emailHelp" placeholder="Enter Netid" name="review">
 
            <label for="sem">Semester</label>
            <select name="semester" id="semester" class="form-control">
@@ -78,7 +78,7 @@
 
             </div>
 
-           <button name="mybutton" type="submit" value="1" class="btn btn-primary">Post Review</button>
+           <button name="mybutton" type="submit" value= <%= deptid %> class="btn btn-primary">Post Review</button>
          </form>
    </div>
  </div>
