--- a/views/user.ejs
+++ b/views/user.ejs
@@ -9,7 +9,7 @@
 
  <body>
    <nav>
-    <a href="/index">Home</a>
+    <a href="/">Home</a>
     <a>User</a>
     <a href="/review">Reviews</a>
     
