--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -22,7 +22,7 @@
            <div class="form-group">
 
           <label for="netid">Net Id</label>
-          <input type="text" class="form-control col-lg-9" id="deptid" aria-describedby="emailHelp" placeholder="Enter Netid" name="review">
+          <input type="text" class="form-control col-lg-9" id="deptid" aria-describedby="emailHelp" placeholder="Enter Netid" name="netid">
 
            <label for="sem">Semester</label>
            <select name="semester" id="semester" class="form-control">
@@ -43,7 +43,7 @@
             </select>
           
             <label for="wh">Course Number</label>
-            <input type="number" class="form-control col-lg-9" id="cid" aria-describedby="emailHelp" placeholder="Enter course number eg.c1" name="wh">
+            <input type="number" class="form-control col-lg-9" id="cid" aria-describedby="emailHelp" placeholder="Enter course number eg.c1682-c1691" name="wh">
         
             
             <label for="dr">Difficulty Rating</label>
