--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -22,7 +22,7 @@
            <div class="form-group">
 
           <label for="netid">Net Id</label>
-          <input type="text" class="form-control col-lg-9" id="deptid" aria-describedby="emailHelp" placeholder="Enter Netid" name="netid">
+          <input type="text" class="form-control col-lg-9" id="netid" aria-describedby="emailHelp" placeholder="Enter Netid" name="netid">
 
            <label for="sem">Semester</label>
            <select name="semester" id="semester" class="form-control">
