--- a/views/reviewdept.ejs
+++ b/views/reviewdept.ejs
@@ -20,9 +20,9 @@
          <h2>Choose course</h2>
          <form action="review-dept" method="POST">
            <div class="form-group">
-            <label for="name">Enter Department</label>
-            <input type="text" class="form-control col-lg-9" id="dept" aria-describedby="emailHelp" placeholder="Enter Dept eg. CS" name="dept">
-            <label for="name">Enter Course number</label>
+            <label for="dep">Enter Department</label>
+            <input type="text" class="form-control col-lg-9" id="dep" aria-describedby="emailHelp" placeholder="Enter Dept eg. CS" name="dep">
+            <label for="cid">Enter Course number</label>
             <input type="text" class="form-control col-lg-9" id="cid" aria-describedby="emailHelp" placeholder="Enter Course Number" name="cid">
             
             <button type="submit" class="btn btn-primary">Find Courses</button>
