--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -42,8 +42,8 @@
                 <% } %>
             </select>
           
-            <label for="wh">Course Number</label>
-            <input type="number" class="form-control col-lg-9" id="cid" aria-describedby="emailHelp" placeholder="Enter course number eg.c1682-c1691" name="wh">
+            <label for="cid">Course Number</label>
+            <input type="text" class="form-control col-lg-9" id="cid" aria-describedby="emailHelp" placeholder="Enter course number eg.c1682-c1691" name="wh">
         
             
             <label for="dr">Difficulty Rating</label>
