--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -23,6 +23,9 @@
 
           <label for="netid">Net Id</label>
           <input type="text" class="form-control col-lg-9" id="netid" aria-describedby="emailHelp" placeholder="Enter Netid" name="netid">
+          
+          <label for="dept">Department</label>
+          <input type="text" class="form-control col-lg-9" id="dept" aria-describedby="emailHelp" placeholder="Enter Department" name="dept">
 
            <label for="sem">Semester</label>
            <select name="semester" id="semester" class="form-control">
@@ -43,7 +46,7 @@
             </select>
           
             <label for="cid">Course Number</label>
-            <input type="text" class="form-control col-lg-9" id="cid" aria-describedby="emailHelp" placeholder="Enter course number eg.c1682-c1691" name="wh">
+            <input type="text" class="form-control col-lg-9" id="cid" aria-describedby="emailHelp" placeholder="Enter course number eg.c1682-c1691" name="cid">
         
             
             <label for="dr">Difficulty Rating</label>
