--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -79,9 +79,8 @@
             <label for="wh">Workload hours</label>
             <input type="number" class="form-control col-lg-9" id="wh" aria-describedby="emailHelp" placeholder="Enter number of hours per week the course needed eg.15" name="wh">
 
-            <label for="review">Review</label>
-            <input type="text" class="form-control col-lg-9" id="reviewtext" aria-describedby="emailHelp" placeholder="Enter review" name="review">
-            <input type="text" hidden class="form-control col-lg-9" id="dept" aria-describedby="emailHelp" value = "dept1" placeholder="dept" name="review">
+            <label for="reviewtext">Review</label>
+            <input type="text" class="form-control col-lg-9" id="reviewtext" aria-describedby="emailHelp" placeholder="Enter review" name="reviewtext">
 
             </div>
 
