--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -24,8 +24,8 @@
           <label for="netid">Net Id</label>
           <input type="text" class="form-control col-lg-9" id="netid" aria-describedby="emailHelp" placeholder="Enter Netid" name="netid">
           
-          <label for="dept">Department</label>
-          <input type="text" class="form-control col-lg-9" id="dept" aria-describedby="emailHelp" placeholder="Enter Department" name="dept">
+          <label for="dep">Department</label>
+          <input type="text" class="form-control col-lg-9" id="dep" aria-describedby="emailHelp" placeholder="Enter Department" name="dep">
 
            <label for="sem">Semester</label>
            <select name="semester" id="semester" class="form-control">
