--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -46,7 +46,7 @@
             </select>
           
             <label for="cid">Course Number</label>
-            <input type="text" class="form-control col-lg-9" id="cid" aria-describedby="emailHelp" placeholder="Enter course number eg.c1682-c1691" name="cid">
+            <input type="text" class="form-control col-lg-9" id="cid" aria-describedby="emailHelp" placeholder="<%= data[0].CourseId%>" name="cid">
         
             
             <label for="dr">Difficulty Rating</label>
