--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -84,7 +84,7 @@
 
             </div>
 
-           <button name="mybutton" type="submit" value= <%= deptid %> class="btn btn-primary">Post Review</button>
+           <button name="mybutton" type="submit" value="deptid"> class="btn btn-primary">Post Review</button>
          </form>
    </div>
  </div>
