--- a/views/reviewcourse.ejs
+++ b/views/reviewcourse.ejs
@@ -27,7 +27,7 @@
              <select name="course" id="course" class="form-control">
                 <option value="">Choose Course</option>
                 <% for(var i = 0; i <= course.length; i++)  { %>
-                <option value="<%= course[i].CourseId %>"><%= course[i].Number %>- <%= course[i].Title %></option>
+                <option value="<%=i %>"><%= course[i].Number %>- <%= course[i].Title %></option>
                 <% } %>
             </select>            
             
