--- a/views/reviewcourse.ejs
+++ b/views/reviewcourse.ejs
@@ -26,7 +26,7 @@
             <label for="course">Course</label>
              <select name="course" id="course" class="form-control">
                 <option value="">Choose Course</option>
-                <% for(var i = 0; i <= data.length; i++)  { %>
+                <% for(var i = 0; i < data.length; i++)  { %>
                 <option value="<%=i %>"><%= data[i].Number%>- <%=data[i].Title%></option>
                 <% } %>
             </select>            
