--- a/views/reviewcourse.ejs
+++ b/views/reviewcourse.ejs
@@ -27,14 +27,14 @@
              <select name="course" id="course" class="form-control">
                 <option value="">Choose Course</option>
                 <% for(var i = 0; i < data.length; i++)  { %>
-                <option value="<%=i %>"><%= data[i].Number%>- <%=data[i].Title%></option>
+                <option value="<%=data[i].CourseId %>"><%= data[i].Number%>- <%=data[i].Title%></option>
                 <% } %>
             </select>            
             
             
             </div>
 
-           <button name="mybutton" type="submit" value= <%= deptid %> class="btn btn-primary">Find Reviews</button>
+           <button name="mybutton" type="submit" value= <%= data[i].DeptId %> class="btn btn-primary">Find Reviews</button>
          </form>
    </div>
  </div>
