--- a/views/reviewcourse.ejs
+++ b/views/reviewcourse.ejs
@@ -34,7 +34,7 @@
             
             </div>
 
-           <button name="mybutton" type="submit" value= <%= data[i].DeptId %> class="btn btn-primary">Find Reviews</button>
+           <button name="mybutton" type="submit" value= <%= data[0].DeptId %> class="btn btn-primary">Find Reviews</button>
          </form>
    </div>
  </div>
