--- a/views/showreviews.ejs
+++ b/views/showreviews.ejs
@@ -12,7 +12,7 @@
      <nav>
         <a href="/">Home</a>
         <a href="/user">User</a>
-        <a href="/reviewdept">Reviews</a>
+        <a href="/review">Reviews</a>
        </nav>
 
     
@@ -20,7 +20,7 @@
         <table class="table">
           <thead>
             <tr>
-              <th>  </th>
+              <th> Overall Course Rating </th>
               <th>Difficulty Rating (1-10) </th>
               <th>Practicality Rating (1-10)</th>
               <th>Workload (hrs/week)</th>
