--- a/views/loginuser.ejs
+++ b/views/loginuser.ejs
@@ -11,7 +11,7 @@
    <nav>
     <a href="/">Home</a>
     <a href="/user">User</a>
-    <a href="/reviewdept">Reviews</a>
+    <a href="/review">Reviews</a>
     
   </nav>
    <div class="container mt-4">
