--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -45,7 +45,7 @@
                 <% } %>
             </select>
           
-            label for="course">Course</label>
+            <label for="course">Course</label>
              <select name="cid" id="cid" class="form-control">
                 <option value="">Choose Course</option>
                 <% for(var i = 0; i < data.length; i++)  { %>
