--- a/views/reviewcourse.ejs
+++ b/views/reviewcourse.ejs
@@ -19,7 +19,7 @@
        <div class="card-body">
          <h2>Choose a course</h2>
          <form action="find-review" method="POST">
-           <div class="form-group">
+           <div class="form-group" style="text-align: center; border: 1px solid">
 
           
           
