--- a/views/reviewcourse.ejs
+++ b/views/reviewcourse.ejs
@@ -19,7 +19,7 @@
        <div class="card-body">
          <h2>Choose a course</h2>
          <form action="find-review" method="POST">
-           <div class="form-group" style="text-align: center; border: 1px solid">
+           <div class="form-group" style="text-align: center;">
 
           
           
@@ -37,6 +37,7 @@
            <button name="mybutton" type="submit" value= <%= data[0].DeptId %> class="btn btn-primary">Find Reviews</button>
          </form>
    </div>
+ </div>
  </div>
  </body>
 </html>
