--- a/views/reviewdept.ejs
+++ b/views/reviewdept.ejs
@@ -18,14 +18,16 @@
      <div class="card">
        <div class="card-body" style="text-align: center; border: 1px solid">
          <h2>Choose course</h2>
-         <form action="review-dept" style="text-align: center; border: 1px solid" method="POST">
-           <div class="form-group">
+         <form action="review-dept"  method="POST">
+           <div class="form-group" style="text-align: center">
             <label for="dep">Enter Department</label>
             <input type="text" class="form-control col-lg-9" id="dep" aria-describedby="emailHelp" placeholder="Enter Dept eg. CS" name="dep">
           
             <button type="submit" class="btn btn-primary">Find Courses</button>
+            </div>
          </form>
-   </div>
- </div>
+        </div>
+    </div>
+    </div>
  </body>
 </html>
