--- a/views/reviewcourse.ejs
+++ b/views/reviewcourse.ejs
@@ -14,12 +14,12 @@
     <a href="/review">Reviews</a>
     
   </nav>
-   <div class="container mt-4">
+   <div class="container mt-4" style="text-align: center;">
      <div class="card">
        <div class="card-body">
          <h2>Choose a course</h2>
          <form action="find-review" method="POST">
-           <div class="form-group" style="text-align: center;">
+           <div class="form-group" >
 
           
           
