--- a/views/reviewdept.ejs
+++ b/views/reviewdept.ejs
@@ -14,7 +14,7 @@
     <a href="/review">Reviews</a>
     
   </nav>
-   <div class="container mt-4">
+   <div class="container mt-4" style="text-align: center;">
      <div class="card">
        <div class="card-body" style="text-align: center; border: 1px solid">
          <h2>Choose course</h2>
