--- a/views/showreviews.ejs
+++ b/views/showreviews.ejs
@@ -18,7 +18,7 @@
        <div class="container mt-4"  style="text-align: center;">
 
        <h3> Overall Course Ratings </h3>
-       <% if(resdata.length){ for(var i = 0; i< resdata.length; i++) {%>
+       <% if(data2.length){ for(var i = 0; i< data2.length; i++) {%>
 
        <div class="container mt-4" >
         <table class="table">
@@ -37,13 +37,13 @@
           <tbody>
             <tr>
               <th scope="row"></th>
-              <td><%= resdata[i].Name%></td>
-              <td><%= resdata[i].Practical_rating%></td>
-              <td><%= resdata[i].Difficulty_rating%></td>
-              <td><%= resdata[i].Workload_hours%></td>
-              <td><%= resdata[i].Course_rating%></td>
-              <td><%= resdata[i].diff%></td>
-              <td><%= resdata[i].gpa%></td>
+              <td><%= data2[i].Name%></td>
+              <td><%= data2[i].Practical_rating%></td>
+              <td><%= data2[i].Difficulty_rating%></td>
+              <td><%= data2[i].Workload_hours%></td>
+              <td><%= data2[i].Course_rating%></td>
+              <td><%= data2[i].diff%></td>
+              <td><%= data2[i].gpa%></td>
 
                 </tr>
                 </tbody>
@@ -59,7 +59,6 @@
           <thead>
             <tr>
               <th>No.</th>
-              <th>Course</th>
               <th>Review</th>
               <th>Difficulty Rating (1-10) </th>
               <th>Practicality Rating (1-10)</th>
@@ -71,7 +70,6 @@
             <% if(data.length){ for(var i = 0; i< data.length; i++) {%>
             <tr>
               <th scope="row"><%=(i+1)%></th>
-              <td><%= data[i].DeptId%><%= data[i].Number%> - <%= data[i].Title%></td>
               <td><%= data[i].Review%></td>   
               <td><%= data[i].Practical_rating%></td>
               <td><%= data[i].Difficulty_rating%></td>
